--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <section>
+        <div>
+            <h2 class="box">LESSON 7</h2>
+        </div>
         <header>
             <h1>How to Use CSS Box Model Effectively</h1>
             <p>When designing web layouts, understanding the relationship between  typography and the box model is crucial. Each text element occupies  space that can be controlled through padding, margin, and border  properties.</p>
@@ -26,5 +29,9 @@
             <p>Use consistent spacing values to create visual hierarchy and improve  readability. Notice how this callout uses padding and a left border for  emphasis.</p>
         </article>
     </section>
+    <div>
+            <h2 class="box box--positioned">REQUEST HELP <img src="./mdi_face-agent.svg" alt=""></h2>
+
+        </div>
 </body>
 </html>
